plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.110'
    id 'org.jetbrains.kotlin.jvm' version '2.1.20'
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    maven {
        name = 'kotlinforforge'
        url = 'https://thedarkcolour.github.io/KotlinForForge/'
        content { includeGroup "thedarkcolour" }
    }
    maven {
        url "https://maven.shedaniel.me/"
        content {
            includeGroupByRegex "me\\.shedaniel.*"
        }
    }
    maven {
        url "https://maven.bai.lol"
        content {
            includeGroupByRegex "lol\\.bai.*"
        }
    }
    maven { url 'https://jitpack.io' }
    maven {
        name = 'plasmoverse-releases'
        url = 'https://repo.plasmoverse.com/releases'
        content {
            includeGroupByRegex "su\\.plo.*"
        }
    }
    maven {
        name = 'plasmoverse-snapshots'
        url = 'https://repo.plasmoverse.com/snapshots'
        content {
            includeGroupByRegex "su\\.plo.*"
        }
    }
}

base {
    archivesName = "${mod_name}-NeoForge-${minecraft_version}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            clientData()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }


dependencies {
    // Example mod dependency with JEI
    // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
    // compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
    // compileOnly "mezz.jei:jei-${mc_version}-forge-api:${jei_version}"
    // runtimeOnly "mezz.jei:jei-${mc_version}-forge:${jei_version}"

    // Example mod dependency using a mod jar from ./libs with a flat dir repository
    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
    // The group id is ignored when searching -- in this case, it is "blank"
    // implementation "blank:coolmod-${mc_version}:${coolmod_version}"

    // Example mod dependency using a file as dependency
    // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")

    // Example project dependency using a sister or child project:
    // implementation project(":myproject")

    // For more info:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html

    jarJar(implementation("com.squareup.okhttp3:okhttp:${project.okhttp_version}")) {
        version {
            strictly '[4.0,)'
            prefer "${project.okhttp_version}"
        }
    }
    jarJar(implementation("com.squareup.okio:okio-jvm:${project.okio_version}")) { //okio-jvm, not okio. This cost me like 1hr of debugging
        version {
            strictly '[3.0,)'
            prefer "${project.okio_version}"
        }
    }
    jarJar(implementation ("com.github.umjammer:jlayer:${project.jlayer_version}")) {
        version {
            strictly '[1.0,)'
            prefer "${project.jlayer_version}"
        }
    }
    jarJar(implementation("org.apache.tika:tika-core:${project.tika_version}")) {
        version {
            strictly '[2.0,)'
            prefer "${project.tika_version}"
        }
    }
    jarJar(implementation("org.apache.commons:commons-text:${project.commons_text_version}")) {
        version {
            strictly '[1.0,)'
            prefer "${project.commons_text_version}"
        }
    }
//    compileOnly "thedarkcolour:kotlinforforge-neoforge:${project.kotlin_for_forge_version}"  // if use implementation, it will crash on devrun... seems conflict with okhttp stuff. Im not familiar with gradle stuff so Idk why
    // update: the above trick wont work now. Currently i'm removing it from build.gradle. However it's required in non-dev env, so Im adding a dependencyOverride in dev env as a dirty hack...
    api "me.shedaniel.cloth:cloth-config-neoforge:${project.cloth_config_version}"
    implementation "lol.bai:badpackets:neo-${badpackets_version}"
    compileOnly "su.plo.voice.api:client:${plasmovoice_version}"

    additionalRuntimeClasspath "com.squareup.okhttp3:okhttp:${project.okhttp_version}"
    additionalRuntimeClasspath "com.squareup.okio:okio-jvm:${project.okio_version}"
    additionalRuntimeClasspath "com.github.umjammer:jlayer:${project.jlayer_version}"
    additionalRuntimeClasspath "org.apache.tika:tika-core:${project.tika_version}"
    additionalRuntimeClasspath "org.apache.commons:commons-text:${project.commons_text_version}"
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description,
                             badpackets_version     : badpackets_version,
                             cloth_config_version   : cloth_config_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
